@@ -20,6 +20,9 @@ x2goclient (4.0.4.1-0x2go1) UNRELEASED; urgency=low
       starting scdaemon. Fixes: #882.
     - x2goutils.h: add QMessageBox include, fixed compile error.
     - onmainwindow.cpp: fix typos leading to compile errors.
+    - onmainwindow.cpp: add blocks to switch cases to fix a compile error.
+      Also correctly append to informative_text on one occasion, instead of
+      overwriting it.
 
  -- X2Go Release Manager <git-admin@x2go.org>  Tue, 26 May 2015 21:42:09 +0200
 
